@@ -81,6 +81,8 @@ public enum HelpMenu {
 				.add("[town] set", "")
 				.add("[town] toggle", "")
 				.add("[town] meta", "")
+				.add("[town] merge [townname]", "")
+				.add("[town] forcemerge [townname]", "")
 				.add("[town] deposit [amount]", "")
 				.add("[town] withdraw [amount]", "")
 				.add("[town] bankhistory", "")
@@ -116,6 +118,8 @@ public enum HelpMenu {
 				.add("[nation] rename [newname]", "")
 				.add("[nation] delete", "")
 				.add("[nation] recheck", "")
+				.add("[nation] merge [nationname]", "")
+				.add("[nation] forcemerge [nationname]", "")
 				.add("[nation] toggle", "")
 				.add("[nation] set", "")
 				.add("[nation] deposit [amount]", "")
